# project-tracking-system

./: README.md
client/: package-lock.json  package.json
client/src/config/: api.ts
server/: pyproject.toml
server/accounts/: models.py  urls.py  views.py
server/accounts/migrations/: 0001_initial.py
server/projects/: models.py  serializers.py  urls.py  views.py
server/projects/migrations/: 0001_initial.py  0002_alter_employee_options_alter_project_options_and_more.py
server/server/: settings.py  urls.py
server/tasks/: models.py  urls.py  views.py
server/tasks/migrations/: 0001_initial.py
